# ParentalControlAgent

./: .gitignore  CMakeLists.txt  README.md  install.bat  uninstall.bat
resources/: app.rc
src/: App.cpp  App.h  DeviceInfo.cpp  DeviceInfo.h  Logger.cpp  Logger.h  OverlayWindow.cpp  OverlayWindow.h  TimerManager.cpp  TimerManager.h  WebSocketClient.cpp  WebSocketClient.h  main.cpp
